2010-11-06  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/document.c:
   Fix build with GTK 2.12: explicitly include gio.h if GIO
   is available and to be used regardless of the USE_GIO_FILEMON flag.
 * wscript:
   Fix installation of template files.


2010-11-07  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/document.c:
   Make use_safe_file_saving hidden pref apply even when GIO is
   available, because g_file_replace_contents() doesn't handle disk
   space exhaustion.


2010-11-04  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/filetypes.c:
   Do not translate 'name' field for filetype None because it is used
   for hash table lookup. This fixes missing files in the Open dialog
   for the 'All files' filter with non-English locales (thanks to Sardem
   FF7, fixes #3094771).
 * src/filetypes.c, src/filetypes.h, src/document.c, src/symbols.c,
   src/ui_utils.c:
   Add filetypes_get_display_name() to get translations for filetype
   None.
 * src/document.c:
   Fix resource leak when saving files with GIO (patch by Colomban
   Wendling, thanks).


2010-11-02  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/plugindata.h, src/plugins.c, plugins/geanyfunctions.h:
   Add sci_get_lexer() to plugin API.
 * plugins/htmlchars.c:
   Only automatically replace characters when the current document is
   a Markup document.
 * plugins/htmlchars.c:
   Rename submenu item labels to be more descriptive.
 * src/keybindings.c:
   Fix Alt+[0-9] switching tabs when other modifiers are also held.
 * src/ui_utils.c:
   Don't allow pasting of numbers followed by other characters in the
   Go to Line dialog/field (patch by Dimitar Zhekov, thanks).
 * src/main.c:
   Print "GIO" and "built-in regex" if enabled with --version.
 * src/document.c:
   Use g_file_replace_contents() if available to save documents - this
   should help workaround bugs in GVFS (based on patch by Alexey
   Antipov, thanks).
   Needs testing.